--- a/index.html
+++ b/index.html
@@ -5,45 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Patreon支援者専用アーカイブ</title>
   <style>
-    body {
-      font-family: sans-serif;
-      padding: 2rem;
-      background: #f4f4f4;
-    }
-    .hidden {
-      display: none;
-    }
-    #archive {
-      margin-top: 2rem;
-      padding: 1rem;
-      background: #fff;
-      border: 1px solid #ccc;
-    }
-    #login-btn {
-      padding: 0.6rem 1.2rem;
-      font-size: 1rem;
-      cursor: pointer;
-    }
+    body { font-family: sans-serif; display: flex; margin: 0; background: #f4f4f4; }
+    aside { width: 200px; background: #eee; padding: 1rem; height: 100vh; overflow-y: auto; }
+    main { flex: 1; padding: 2rem; }
+    .tag { display: inline-block; margin: 0.2rem; padding: 0.4rem 0.8rem; background: #ccc; cursor: pointer; border-radius: 4px; }
+    .tag.active { background: #888; color: #fff; }
+    .item { margin-bottom: 1rem; padding: 1rem; background: #fff; border: 1px solid #ccc; border-radius: 4px; }
+    .hidden { display: none; }
+    #login-btn { padding: 0.6rem 1.2rem; font-size: 1rem; cursor: pointer; }
   </style>
   <script src="auth.js" defer></script>
+  <script src="archive.js" defer></script>
 </head>
 <body>
 
-  <h1>Patreon支援者限定アーカイブサイト</h1>
-  <p id="status">ログイン状態を確認中...</p>
+  <!-- タグ一覧 -->
+  <aside id="tag-list"></aside>
 
-  <!-- Discordログインボタン -->
-  <button id="login-btn" class="hidden">
-    Discordでログイン
-  </button>
+  <main>
+    <h1>Patreon支援者限定アーカイブサイト</h1>
+    <p id="status">ログイン状態を確認中...</p>
+    <button id="login-btn" class="hidden">Discordでログイン</button>
 
-  <!-- アーカイブリンク（認証済みユーザーのみ表示） -->
-  <div id="archive" class="hidden">
-    ✅ 認証成功！以下からアーカイブにアクセスできます：<br />
-    <a href="https://drive.google.com/your-archive-link" target="_blank">
-      ▶ 保存アーカイブを見る
-    </a>
-  </div>
+    <!-- アーカイブリンク表示エリア（認証後に出る） -->
+    <div id="archive" class="hidden"></div>
+  </main>
 
 </body>
 </html>
