--- a/index.html
+++ b/index.html
@@ -4,16 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Patreon支援者専用アーカイブ</title>
-  <style>
-    body { font-family: sans-serif; display: flex; margin: 0; background: #f4f4f4; }
-    aside { width: 200px; background: #eee; padding: 1rem; height: 100vh; overflow-y: auto; }
-    main { flex: 1; padding: 2rem; }
-    .tag { display: inline-block; margin: 0.2rem; padding: 0.4rem 0.8rem; background: #ccc; cursor: pointer; border-radius: 4px; }
-    .tag.active { background: #888; color: #fff; }
-    .item { margin-bottom: 1rem; padding: 1rem; background: #fff; border: 1px solid #ccc; border-radius: 4px; }
-    .hidden { display: none; }
-    #login-btn { padding: 0.6rem 1.2rem; font-size: 1rem; cursor: pointer; }
-  </style>
+  <link rel="stylesheet" href="style.css" />
   <script src="auth.js" defer></script>
   <script src="archive.js" defer></script>
 </head>
