--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <main>
   <h1>Patreon支援者限定アーカイブサイト</h1>
   <p id="status">ログイン状態を確認中...</p>
+  <input type="text" id="search-box" placeholder="キーワードで検索（タイトル・キャラ・タグ）" style="width:100%; padding: 0.5rem; margin-bottom: 1rem;" />
   <button id="login-btn" class="hidden">Discordでログイン</button>
 
   <div id="archive" class="hidden">
