--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 </aside>
 
 <main>
+  <!-- ハンバーガーボタン（スマホ専用） -->
+<div id="hamburger" class="hidden">
+  ☰ カテゴリ表示
+</div>
+
   <h1>Patreon支援者限定アーカイブサイト</h1>
   <p id="status">ログイン状態を確認中...</p>
   <input type="text" id="search-box" placeholder="キーワードで検索（タイトル・キャラ・タグ）" style="width:100%; padding: 0.5rem; margin-bottom: 1rem;" />
