--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
   <input type="text" id="search-box" placeholder="キーワードで検索（タイトル・キャラ・タグ）" style="width:100%; padding: 0.5rem; margin-bottom: 1rem;" />
   <button id="login-btn" class="hidden">Discordでログイン</button>
 
-  <div id="archive" class="hidden">
-    <!-- JSで作品を描画 -->
-  </div>
+<div id="archive" class="hidden">
+  ✅ 認証成功！以下からアーカイブにアクセスできます：<br />
+  <a href="https://drive.google.com/your-archive-link" target="_blank">▶ 保存アーカイブを見る</a>
+</div>
+
 </main>
 
 </body>
