--- a/index.html
+++ b/index.html
@@ -3,35 +3,36 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Patreon支援者専用アーカイブ</title>
+  <title>支援者限定アーカイブ</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="auth.js" defer></script>
-  <script src="archive.js" defer></script>
 </head>
 <body>
-
-  <!-- タグ一覧 -->
-<aside id="tag-list">
-  <!-- JSで階層ツリーを生成する -->
-</aside>
-
-  <!-- ハンバーガーボタン（スマホ専用） -->
-<div id="hamburger" class="hidden">
-  ☰ カテゴリ表示
-</div>
-  
-<main>
-  <h1>Patreon支援者限定アーカイブサイト</h1>
-  <p id="status">ログイン状態を確認中...</p>
-  <input type="text" id="search-box" placeholder="キーワードで検索（タイトル・キャラ・タグ）" style="width:100%; padding: 0.5rem; margin-bottom: 1rem;" />
-  <button id="login-btn" class="hidden">Discordでログイン</button>
-
-<div id="archive" class="hidden">
-  ✅ 認証成功！以下からアーカイブにアクセスできます：<br />
-  <a href="https://drive.google.com/your-archive-link" target="_blank">▶ 保存アーカイブを見る</a>
-</div>
-
-</main>
-
+  <header>
+    <h1>支援者限定アーカイブ</h1>
+  </header>
+  <main>
+    <!-- メッセージ表示（エラー/ログアウト通知など） -->
+    <div id="message" class="message"></div>
+    <!-- 認証済みユーザー向け：歓迎メッセージとログアウトボタン -->
+    <div id="welcome-section" style="display: none;">
+      <p>ようこそ、<span id="username"></span> さん！</p>
+      <button id="logout-btn">ログアウト</button>
+    </div>
+    <!-- 未認証ユーザー向け：ログイン誘導 -->
+    <div id="login-section" style="display: none;">
+      <p>アーカイブを見るにはDiscordでログインしてください。</p>
+      <button id="login-btn">Discordでログイン</button>
+    </div>
+    <!-- 支援者限定アーカイブコンテンツ -->
+    <div id="content" style="display: none;">
+      <h2>アーカイブ一覧</h2>
+      <ul>
+        <li>2025-01-01: 特典コンテンツ1</li>
+        <li>2025-02-01: 特典コンテンツ2</li>
+        <li>2025-03-01: 特典コンテンツ3</li>
+      </ul>
+    </div>
+  </main>
+  <script src="auth.js"></script>
 </body>
 </html>
