--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- 右：本文 -->
   <main>
     <section id="login-section">
-      <p id="status">ログイン状態を確認中...</p>
+      <p id="status"></p>
       <button id="login-btn">Discordでログイン</button>
     </section>
 
