--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     </section>
 
     <section id="welcome-section" style="display:none;">
-      ようこそ、<span id="username"></span> さん！
+      <!-- index.html -->
+      <p id="status"></p>
       <button id="logout-btn">ログアウト</button>
     </section>
 
