--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <button id="login-btn">Discordでログイン</button>
     </section>
 
-    <section id="welcome-section" style="display:none;">
+    <section id="welcome-section" style="display:block;">
       <!-- index.html -->
       <p id="status"></p>
       <button id="logout-btn">ログアウト</button>
