--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <aside id="tag-list"></aside>
 
   <!-- 右：本文 -->
-  <<main>
+  <main>
   <!-- ログイン前 -->
   <section id="login-section">
     <p id="login-status">ログイン状態を確認中...</p>
