--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <main>
   <!-- ログイン前 -->
   <section id="login-section">
-    <p id="login-status">ログイン状態を確認中...</p>
+    <p id="login-status">ログインしてください。</p>
     <button id="login-btn">Discordでログイン</button>
   </section>
 
