--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <!-- コンテンツ -->
   <section id="content" style="display: none;">
-    <input type="text" id="search-box" placeholder="タイトル・キャラ・タグで検索" />
+    <input type="text" id="search-box" placeholder="キャラ・作品名で検索" />
     <div id="archive"></div>
   </section>
 </main>
