--- a/admin.html
+++ b/admin.html
@@ -51,6 +51,9 @@
         <input type="text" id="tags" name="tags">
       </div>
       <div>
+        <label for="patreonUrl">PatreonリンクURL：</label>
+        <input type="text" id="patreonUrl" name="patreonUrl" required>
+      <div>
         <label for="url">ZIPリンクURL：</label>
         <input type="text" id="url" name="url" required>
       </div>
