--- a/admin.html
+++ b/admin.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <title>管理ページ - アーカイブ登録・編集</title>
   <link rel="stylesheet" href="style.css" />
   <!-- 管理ページ用スクリプト -->
