--- a/admin.html
+++ b/admin.html
@@ -54,6 +54,11 @@
       <div>
         <label for="patreonUrl">PatreonリンクURL：</label>
         <input type="text" id="patreonUrl" name="patreonUrl" required>
+      </div>
+      <div>
+        <label for="boothUrl">BOOTHリンクURL：</label>
+        <input type="text" id="boothUrl" name="boothUrl">
+      </div>
       <div>
         <label for="url">ZIPリンクURL：</label>
         <input type="text" id="url" name="url" required>
